Add Kategori Index & Users Index

--- a/myStore_BackEnd/Views/Produk/Index.cshtml
+++ b/myStore_BackEnd/Views/Produk/Index.cshtml
@@ -1,7 +1,9 @@
 ﻿@model myStore_BackEnd.Models.ProdukModel
 
-@{ ViewBag.Title = "Index";
-    Layout = "~/Views/Shared/Templates.cshtml"; }
+@{
+    ViewBag.Title = "Index";
+    Layout = "~/Views/Shared/Templates.cshtml";
+}
 
 <!-- Page Header-->
 <header class="page-header">
