--- a/myStore_BackEnd/Views/Produk/Index.cshtml
+++ b/myStore_BackEnd/Views/Produk/Index.cshtml
@@ -1,7 +1,10 @@
 ﻿@model myStore_BackEnd.Models.ProdukModel
 
-@{ ViewBag.Title = "Index";
-    Layout = "~/Views/Shared/Templates.cshtml"; }
+@{
+    ViewBag.Title = "Index";
+    Layout = "~/Views/Shared/Templates.cshtml";
+    int no = 1;
+}
 
 <!-- Modal -->
 <div class="modal fade" id="addProdukModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -81,7 +84,7 @@
                 <table class="table table-striped table-bordered" style="width:100%" id="tblproduk">
                     <thead>
                         <tr>
-                            <th>ID</th>
+                            <th>No</th>
                             <th>Kategori</th>
                             <th>Kode</th>
                             <th>Nama Produk</th>
@@ -95,7 +98,7 @@
                         @foreach (var pd in (dynamic)ViewData["view_produk"])
                         {
             <tr>
-                <td>@Html.Encode(pd.id_produk)</td>
+                <td>@no</td>
                 <td>@Html.Encode(pd.nama_kategori)</td>
                 <td>@Html.Encode(pd.kode_produk)</td>
                 <td>@Html.Encode(pd.nama_produk)</td>
@@ -106,7 +109,9 @@
                     @Html.ActionLink("Edit", "EditProduk", "Produk", new { id = pd.id_produk }, new { @class = "btn btn-primary btn-sm" })
                     @Html.ActionLink("Delete", "DeleteProduk", "Produk", new { id = pd.id_produk }, new { id = "btndelete", @class = "btn btn-danger btn-sm", onclick = "return confirm('Benar Akan Di Hapus data ini?');" })
                 </td>
-            </tr>}
+            </tr>
+                            no++;
+                        }
                     </tbody>
                 </table>
             </div>
