--- a/myStore_BackEnd/Views/Shared/Templates.cshtml
+++ b/myStore_BackEnd/Views/Shared/Templates.cshtml
@@ -45,8 +45,8 @@
                 <div class="sidebar-header d-flex align-items-center">
                     <div class="avatar"><img src="~/Content/Dashboard/img/avatar-1.jpg" alt="..." class="img-fluid rounded-circle"></div>
                     <div class="title">
-                        <h1 class="h4">Mark Stephen</h1>
-                        <p>Web Designer</p>
+                        <h1 class="h4">@Session["user_id"]</h1>
+                        <p>@Session["user_level"]</p>
                     </div>
                 </div>
                 <!-- Sidebar Navidation Menus--><span class="heading">Main</span>
@@ -79,7 +79,7 @@
                 </ul>
                 <ul class="list-unstyled">
                     <li>
-                        <a href="@Url.Action("Index", "Dashboard")">
+                        <a href="@Url.Action("LogOff", "Login")">
                             <i class="fa fa-sign-out"></i>
                             Log Off
                         </a>
