--- a/myStore_BackEnd/Views/Login/Index.cshtml
+++ b/myStore_BackEnd/Views/Login/Index.cshtml
@@ -31,6 +31,16 @@
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
+
+    @if (ViewBag.Message != null)
+    {
+        <script type="text/javascript">
+            window.onload = function () {
+                alert(ViewBag.Message)
+            }
+        </script>
+    }
+
 </head>
 <body>
     <div class="page login-page">
